<resources>
    <!--App Strings-->
    <string name="app_name">androidprototype</string>
    <string name="company_name">Company Name</string>
    <string name="text_login">Login</string>
    <string name="text_signup">Signup</string>
    <string name="text_password">Password</string>
    <string name="text_email">Email</string>

    <!--Title Strings-->
    <string name="title_account">Account</string>
    <string name="title_usage">Usage</string>
    <string name="title_signup">Signup</string>
    <string name="title_login">Login</string>

    <!--Account Strings-->
    <string name="label_name">Name:</string>
    <string name="label_email">Email:</string>
    <string name="label_address">Address:</string>

    <!--Usage Strings-->
    <string name="label_recent">Recent:</string>
    <string name="label_this_month">This month:</string>
    <string name="label_last_month">Last month:</string>
    <string name="label_current_subtitle_usage">Current stats</string>
    <string name="label_previous_subtitle_usage">Previous stats</string>
    <string name="label_costs_subtitle_usage">Costs</string>
    <string name="label_previous_subtitle_cost">Previous costs</string>
    <string name="label_current_subtitle_cost">Current costs</string>
    <string name="generic_error">Check the fields and try again</string>
    <string name="error_empty_field">Fields cannot be empty</string>
    <string name="error_empty_field_login_signup">Username or password field cannot be empty</string>
    <string name="empty_string"/>
    <string name="loading_fetching">Fetching your information</string>
    <string name="warning_processing">Thank you for signing up, your account is still being processed. Check back soon.</string>
    <string name="button_edit">Edit</string>
    <string name="btn_save">Save</string>
    <string name="btn_change_password">Change Password</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="password_title">Change password</string>
    <string name="password_old">Old password</string>
    <string name="password_new_password">New password</string>
    <string name="password_confirm_password">Confirm new password</string>
    <string name="button_update">Update</string>
    <string name="button_logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="drawer_usage">Usage</string>
    <string name="drawer_bills">Bills</string>
    <string name="drawer_account">Account</string>
    <string name="drawer_more">More</string>
    <string name="drawer_sign_out">Sign Out</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_payments">Payments</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_contact_us">Contact Us</string>
    <string name="button_feedback">Feedback</string>
    <string name="button_about_us">About Us</string>
    <string name="button_terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="button_get_started">get started</string>
    <string name="forgot_password_error">Please enter a valid email address</string>
    <string name="button_make_a_payment">Make a payment</string>
    <string name="button_download">download</string>
    <string name="lorem_ipsum">dolor sit amet, quo an erat indoctum maluisset, accusam copiosae at sea. Convenire complectitur sit at. Est no postulant vituperatoribus, quod solet oporteat mei an. Postea intellegam id mei, cum insolens legendos platonem eu. Verterem accusata dignissim at est, tale honestatis no quo, diceret detracto atomorum ei vim. Alii facilisis id sed. Ut sea natum veniam incorrupte, per eius expetendis an, nec mazim labore ne. Quo an summo ignota senserit, ex nec eruditi atomorum, ad sed eros fabulas laboramus. Ei nam facer assum noluisse. Vix te imperdiet mnesarchum. Aliquid gubergren temporibus id sed, ne duo solum sadipscing. Eligendi eloquentiam ea eum, nam ad mundi quaestio. Eam at zril homero aliquid, ei mazim nusquam recusabo nam, tamquam vulputate forensibus usu in. Quem mollis lobortis ne pri. Eam fabulas forensibus te, persius dissentiet eu his, cu usu fabulas perpetua contentiones. Mel eripuit fabulas ne, mel eu mentitum nominati. No cum fugit senserit. In sea aeterno offendit instructior. Fugit albucius sapientem vis ex, cum invenire similique ex. Ea accusam ocurreret pro, et qui viderer iudicabit, eam libris integre eu. Eu zril appellantur pri, mei ad falli impedit, ei clita apeirian eum. Vidit interpretaris et sit, oratio tractatos ius te, ut sea tacimates dissentiet. Ei eos simul probatus, est tantas essent verear at. Labores mentitum voluptatibus eam te.</string>
    <string name="lorem_ipsum_title">Lorem Ipsum</string>
    <string name="text_amount_due">Amount due</string>
    <string name="text_payment_type">Payment Type:</string>
    <string name="text_credit_card">Credit Card</string>
    <string name="text_direct_debit">Direct Debit</string>
    <string name="text_visa">Visa</string>
    <string name="text_mastercard">Mastercard</string>
    <string name="text_card_name">Card Name</string>
    <string name="text_card_number">Card Number</string>
    <string name="text_expiry_date">Expiry Date</string>
    <string name="text_cvv">CVV</string>
    <string name="text_account_name">Account Name</string>
    <string name="text_bsb_number">BSB Number</string>
    <string name="text_account_number">Account Number</string>
    <string name="button_continue">Continue</string>
    <string name="description_logo">logo</string>
    <string name="text_forgot_password">Please enter your email address below</string>
    <string name="button_submit">submit</string>

</resources>
