<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sit374group9.androidprototype.SignupActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_signup"
        android:textAlignment="center"
        android:textSize="@dimen/heading_font_size"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="logo"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:labelFor="@id/edit_username"
        android:text="@string/text_email"/>

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:labelFor="@id/edit_password"
        android:text="@string/text_password"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/error_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/text_signup"
        android:onClick="signupButtonOnClick"/>
</LinearLayout>
