<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp"
              android:layout_centerVertical="true">

    <LinearLayout
        android:id="@+id/progress_bar_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading_fetching"
            android:textAlignment="center"
            />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            android:indeterminate="true"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_account"
            android:textSize="@dimen/heading_font_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="@dimen/account_field_length"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textSize="@dimen/body_text_size"
                />

            <TextView
                android:id="@+id/account_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/body_text_size"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/account_field_length"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:textSize="@dimen/body_text_size"
                />

            <TextView
                android:id="@+id/account_email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/body_text_size"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/account_field_length"
                android:layout_height="wrap_content"
                android:text="@string/label_address"
                android:textSize="@dimen/body_text_size"
                />

            <TextView
                android:id="@+id/account_address_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/body_text_size"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/account_processing_warning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/warning_processing"
            android:textAlignment="center"/>
    </LinearLayout>
</RelativeLayout>