<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LimeGreenBackGround"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.sit374group9.androidprototype.PasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/password_title"
        android:textAlignment="center"
        android:textColor="@color/colorFont"
        android:textSize="@dimen/heading_font_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:labelFor="@id/edit_password"
            android:text="@string/password_new_password"
            android:textColor="@color/colorFont" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:textColor="@color/colorFont" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:labelFor="@id/edit_password"
            android:text="@string/password_confirm_password"
            android:textColor="@color/colorFont" />

        <EditText
            android:id="@+id/new_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:textColor="@color/colorFont" />

        <TextView
            android:id="@+id/error_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/holo_red_light" />

        <Button
            android:id="@+id/button_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/ButtonBrown"
            android:text="@string/button_update"
            android:textColor="@color/White" />

        <ProgressBar
            android:id="@+id/progress_bar_password"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>
